--- a/scripts/hiphp_desktop/src/index.html
+++ b/scripts/hiphp_desktop/src/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="./eel.js"></script>
         <script type="text/javascript" src="./script.js"></script>
         <link rel="stylesheet" href="./style.css">
+        <link rel="icon" href="./favicon.ico">
     </head>
     <body>
         <div id="connected">
@@ -28,14 +29,14 @@
                 <--spam><input type="checkbox">unselect</spam>
             </div-->
             
-            
             <textarea id="cat" class="cat"></textarea>
         </div>
 
         <div id="login">
+            <img src="./hiphp_logo.png" style="width: 160px;"><br>
             <input type="text" id="key" value="123" placeholder="Key" style="width:50%;"><br>
             <input type="text" id="url" value="http://localhost/index.php" style="width:50%;" placeholder="Url"><br>
-            <input type="button" value="Submit" onclick="connect()"><br>
+            <input type="button" value="Login" onclick="connect()"><br>
         </div>
     </body>
 </html>
