--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -1,1 +1,12 @@
-<h1>soon</h1>
+<!--DOCTYPE html-->
+<html>
+    <head>
+        <!-- code by : yasserbdj96 -->
+        <!-- email : yasser.bdj96@gmail.com -->
+        <title>Soon</title>
+        <link rel="icon" href="./favicon.ico">
+    </head>
+    <body>
+        <h1 style="text-align: center;">Hiphp website will be launched soon.</h1>
+    </body>
+</html>
