--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="connected">
-            <spam id="return" class="return pointer padding_9" onclick="back()">⬅️</spam>
+            <spam id="return" class="return pointer padding_9" onclick="back()">back</spam>
             <spam id="save" class="save pointer padding_9" onclick="save()">💾</spam>
             <spam id="temp" style="display:none;"></spam>
             <spam id="add" class="add_new pointer" onclick="add()"><h1 style="margin-top:-11px;margin-left:-4px;">+</h1></spam>
