--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- code by : yasserbdj96 -->
         <!-- email : yasser.bdj96@gmail.com -->
-        <title>login</title>
+        <title>hiphp : login</title>
         <script type="text/javascript" src="./eel.js"></script>
         <script type="text/javascript" src="./script.js"></script>
         <link rel="stylesheet" href="./style.css">
