--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -42,15 +42,15 @@
                     <table width="100%">
                         <tr>
                             <td>Dark Mode</td>
-                            <td><div><input type="checkbox" checked/><span></span></div></td>
+                            <td><div><input type="checkbox" onclick="check(this)"/><span></span></div></td>
                         </tr>
                         <tr>
                             <td>Option 1</td>
-                            <td><div><input type="checkbox" checked="" /><span></span></div></td>
+                            <td><div><input type="checkbox" onclick="check(this)"/><span></span></div></td>
                         </tr>
                         <tr>
                             <td>Option 2</td>
-                            <td><div><input type="checkbox" /><span></span></div></td>
+                            <td><div><input type="checkbox" onclick="check(this)"/><span></span></div></td>
                         </tr>
                     </table>
                     <center><button class="button" onclick=""><i class="fa fa-floppy-o"></i> Save Settings</button></center>
