--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>hiphp</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="icon" href="./favicon.ico">
-</head>
-<body>
-  <div class="logo">
-    <img class="logo-img" src="logo_small.png" onclick="window.open('https://github.com/yasserbdj96/hiphp', '_self')" />
-  </div>
-  <!--div class="old">
-    <span onclick="window.open('ob1/index.html', '_self')">OpenBullet 1 →</span>
-  </div-->
-  <div class="ui">
-    <p class="zoom"><span class="zoom zoomin">+</span><span class="zoom zoomout">-</span></p>
-    <p class="zoomlevel"><span class="percent">100</span> % - (<span class="width"></span>px)(<span class="height"></span>px)</p>
-    <p>Dead: <span class="dead">0</span></p>
-    <p>Alive: <span class="alive">0</span></p>
-    <p>Drawn: <span class="drawn">0</span></p>
-    <p><span class="fps">0</span> FPS</p>
-    <a class="save" href="" download="capture.png">Save</a>
-  </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.min.js'></script>
-  <script  src="./script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>hiphp</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./favicon.ico">
+  </head>
+  <body>
+    <h1 style="text-align:center;">soon</h1>
+    <script  src="./script.js"></script>
+  </body>
 </html>
