--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -6,6 +6,7 @@
         <title>hiphp : login</title>
         <script type="text/javascript" src="./eel.js"></script>
         <script type="text/javascript" src="./script.js"></script>
+        <script type="text/javascript" src="./include.js"></script>
         <link rel="stylesheet" href="./style.css">
         <link rel="icon" href="./favicon.ico">
         <link rel="stylesheet" type="text/css" href="./font-awesome/font-awesome.min.css" />
