--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -22,6 +22,7 @@
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="settings()"><i class="fa fa-cogs"></i></spam>
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="connect()"><i class="fa fa-undo"></i></spam>
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="alert('soon');"><i class="fa fa-terminal"></i></spam>
+            <spam id="up" style="float:right" class="pointer padding_11 w15 text_center" onclick="alert('soon');"><i class="fa fa-upload"></i></spam>
             <spam id="add" style="float:right" class="pointer padding_11 w15 text_center" onclick="add()"><i class="fa fa-plus"></i></spam>
             
             <!--ls-->
@@ -45,15 +46,15 @@
                     <table width="100%">
                         <tr>
                             <td>Dark Mode</td>
-                            <td><div class="tc"><input type="checkbox" onclick="check(this)"/><span></span></div></td>
+                            <td><div class="tc"><input id="darkmode" type="checkbox" onclick="darkmode_check()" onchange="" /><span></span></div></td>
                         </tr>
                         <tr>
                             <td>Option 1</td>
-                            <td><div class="tc"><input type="checkbox" onclick="check(this)"/><span></span></div></td>
+                            <td><div class="tc"><input type="checkbox"/><span></span></div></td>
                         </tr>
                         <tr>
                             <td>Option 2</td>
-                            <td><div class="tc"><input type="checkbox" onclick="check(this)"/><span></span></div></td>
+                            <td><div class="tc"><input type="checkbox"/><span></span></div></td>
                         </tr>
                     </table>
                     <center><button class="button" onclick=""><i class="fa fa-floppy-o"></i> Save Settings</button></center>
