--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -57,7 +57,7 @@
                             <td><div class="tc"><input type="checkbox"/><span></span></div></td>
                         </tr>
                     </table>
-                    <center><button class="button" onclick=""><i class="fa fa-floppy-o"></i> Save Settings</button></center>
+                    <!--center><button class="button" onclick=""><i class="fa fa-floppy-o"></i> Save Settings</button></center-->
                 </div>
             </div>
         </div>
