--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -84,8 +84,8 @@
 
         <div id="login" >
             <img src="./hiphp_logo.png" style="width: 160px;" onload="version()" alt="hiphp logo"><br>
-            <input type="text" id="url" value="http://127.0.0.1/vvv2.php" style="width:50%;" placeholder="Url EX: http://localhost/index.php"><br>
-            <input type="password" id="key" placeholder="Key" style="width:50%;" value="123"><br>
+            <input type="text" id="url" value="" style="width:50%;" placeholder="Url EX: http://localhost/index.php"><br>
+            <input type="password" id="key" placeholder="Key" style="width:50%;" value=""><br>
             <button class="button" onclick="connect()"><i class="fa fa-sign-in"></i> Login</button><br>
             <div class="version" id="version"></div>
         </div>
