--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -35,7 +35,7 @@
             <spam id="temp" style="display:none;"></spam>
             
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="deconnect()"><i class="fa fa-sign-out"></i></spam>
-            <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="alert('soon');"><i class="fa fa-info"></i></spam>
+            <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="alert('hiphp-desktop v0.2.2');"><i class="fa fa-info"></i></spam>
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="settings()"><i class="fa fa-cogs"></i></spam>
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="connect()"><i class="fa fa-undo"></i></spam>
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="alert('soon');"><i class="fa fa-terminal"></i></spam>
