--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -22,6 +22,9 @@
   </head>
   <body>
     <div class="tocenter">
+      <center>
+        <img style="width:150px;" src="logo_small.png">
+      </center>
       <h1 style="text-align:center;">Website is under review & updating ...</h1>
     </div>
     <script  src="./script.js"></script>
