--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -24,8 +24,8 @@
         <link rel="icon" href="./favicon.ico">
         <link rel="apple-touch-icon" href="./favicon.ico">
         <link rel="stylesheet" type="text/css" href="./font-awesome/font-awesome.min.css" />
-        <script src="./index.js" defer></script>
-        <link rel="manifest" href="./manifest.webmanifest">
+        <!--script src="./index.js" defer></script>
+        <link rel="manifest" href="./manifest.webmanifest"-->
         <meta name="theme-color" content="#474b85" />
     </head>
     <body onload="connect_with_cookie()">
