--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -27,6 +27,7 @@
       </center>
       <h1 style="text-align:center;">Website is under review & updating ...</h1>
     </div>
+    <script  src="./md5.min.js"></script>
     <script  src="./script.js"></script>
   </body>
 </html>
