--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -22,10 +22,42 @@
   </head>
   <body>
     <div class="tocenter">
-      <center>
+      <!--center>
         <img style="width:150px;" src="logo_small.png">
       </center>
-      <h1 style="text-align:center;">Website is under review & updating ...</h1>
+      <h1>Website is under review & updating ...</h1-->
+      <h1 style="text-align:center;">Quick Setup</h1>
+      <p style="text-align:center;">Select your distro to get set up.</p>
+
+      <div style="text-align:center;padding:15px;">
+        <a href="#open-ubuntu-modal">
+          <img style="height:100px;padding:15px;" alt="ubuntu" src="./icons/ubuntu.svg" title="ubuntu">
+        </a>
+        <a href="#open-ubuntu-modal">
+          <img style="height:100px;padding:15px;" alt="android" src="./icons/android.svg" title="android">
+        </a>
+        <a href="#open-ubuntu-modal">
+          <img style="height:100px;padding:15px;" alt="windows" src="./icons/windows.svg" title="windows">
+        </a>
+        <a href="#open-ubuntu-modal">
+          <img style="height:100px;padding:15px;" alt="docker" src="./icons/docker.svg" title="docker">
+        </a>
+        <a href="#open-ubuntu-modal">
+          <img style="height:100px;padding:15px;" alt="pypi" src="./icons/pypi.svg" title="pypi">
+        </a>
+        <a href="#open-ubuntu-modal">
+          <img style="height:100px;padding:15px;" alt="colab" src="./icons/colab.svg" title="colab">
+        </a>
+      </div>
+    </div>
+
+    <div id="open-ubuntu-modal" class="modal-window">
+      <div>
+        <a href="#" title="Close" class="modal-close">Close</a>
+        soon
+      </div>
+    </div>
+
     </div>
     <script  src="./md5.min.js"></script>
     <script  src="./script.js"></script>
