--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -26,29 +26,41 @@
         <img style="width:150px;" src="logo_small.png">
       </center>
       <h1>Website is under review & updating ...</h1-->
-      <h1 style="text-align:center;">Quick Setup</h1>
-      <p style="text-align:center;">Select your distro to get set up.</p>
+      <h1 class="center">Quick Setup</h1>
+      <p class="center">Select your distro to get set up.</p>
 
-      <div style="text-align:center;padding:15px;">
+      <div class="center p15">
         <a href="#open-ubuntu-modal">
-          <img style="height:100px;padding:15px;" alt="ubuntu" src="./icons/ubuntu.svg" title="ubuntu">
+          <img class="p15 h100" alt="ubuntu" src="./icons/ubuntu.svg" title="ubuntu">
         </a>
         <a href="#open-ubuntu-modal">
-          <img style="height:100px;padding:15px;" alt="android" src="./icons/android.svg" title="android">
+          <img class="p15 h100" alt="android" src="./icons/android.svg" title="android">
         </a>
         <a href="#open-ubuntu-modal">
-          <img style="height:100px;padding:15px;" alt="windows" src="./icons/windows.svg" title="windows">
+          <img class="p15 h100" alt="windows" src="./icons/windows.svg" title="windows">
         </a>
         <a href="#open-ubuntu-modal">
-          <img style="height:100px;padding:15px;" alt="docker" src="./icons/docker.svg" title="docker">
+          <img class="p15 h100" alt="docker" src="./icons/docker.svg" title="docker">
         </a>
         <a href="#open-ubuntu-modal">
-          <img style="height:100px;padding:15px;" alt="pypi" src="./icons/pypi.svg" title="pypi">
+          <img class="p15 h100" alt="pypi" src="./icons/pypi.svg" title="pypi">
         </a>
         <a href="#open-ubuntu-modal">
-          <img style="height:100px;padding:15px;" alt="colab" src="./icons/colab.svg" title="colab">
+          <img class="p15 h100" alt="colab" src="./icons/colab.svg" title="colab">
         </a>
       </div>
+
+      <br>
+      <br>
+      <br>
+      <h1 class="center">Create your own HIPHP_HOLE_CODE</h1>
+      <div class="center">
+        <input id="passwd" name="passwd" type="text" title="passwd" placeholder="password">
+        <br>
+        <input type="submit" value="GET HIPHP_HOLE_CODE" onclick="geth()">
+      </div>
+      
+
     </div>
 
     <div id="open-ubuntu-modal" class="modal-window">
