--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -70,6 +70,14 @@
       </div>
     </div>
 
+    <div id="open-HIPHP_HOLE_CODE-modal" class="modal-window">
+      <div>
+        <a href="#" title="Close" class="modal-close">Close</a>
+        <br>
+        <textarea id="HIPHP_HOLE_CODE" style="width: 397px; height: 172px;"></textarea>
+      </div>
+    </div>
+
     </div>
     <script  src="./md5.min.js"></script>
     <script  src="./script.js"></script>
