--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -75,6 +75,7 @@
         <a href="#" title="Close" class="modal-close">Close</a>
         <br>
         <textarea id="HIPHP_HOLE_CODE" style="width: 397px; height: 172px;"></textarea>
+        <input type="submit" value="copy" onclick="copy()">
       </div>
     </div>
 
