--- a/hiphp-desktop/src/index.html
+++ b/hiphp-desktop/src/index.html
@@ -26,7 +26,7 @@
         <link rel="icon" href="./favicon.ico">
         <link rel="apple-touch-icon" href="./favicon.ico">
         <link rel="stylesheet" type="text/css" href="./font-awesome/font-awesome.min.css" />
-        <script src="./index.js" defer></script>
+        <!--script src="./index.js" defer></script-->
         <link rel="manifest" href="./manifest.webmanifest">
         <meta name="theme-color" content="#474b85" />
     </head>
@@ -41,9 +41,9 @@
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="settings()"><i class="fa fa-cogs"></i></spam>
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="connect()"><i class="fa fa-undo"></i></spam>
             <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="alert('soon');"><i class="fa fa-terminal"></i></spam>
-            <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="get_selected('delete')"><i class="fa fa-trash-o"></i></spam>
+            <spam id="delete" style="float:right" class="pointer padding_11 w15 text_center" onclick="get_selected('delete')"><i class="fa fa-trash-o"></i></spam>
             <spam id="up" style="float:right" class="pointer padding_11 w15 text_center" onclick="alert('soon');"><i class="fa fa-upload"></i></spam>
-            <spam style="float:right" class="pointer padding_11 w15 text_center" onclick="get_selected('download')"><i class="fa fa-download"></i></spam>
+            <spam id="download" style="float:right" class="pointer padding_11 w15 text_center" onclick="get_selected('download')"><i class="fa fa-download"></i></spam>
             <spam id="add" style="float:right" class="pointer padding_11 w15 text_center" onclick="add()"><i class="fa fa-plus"></i></spam>
             
             <!--ls-->
@@ -70,10 +70,13 @@
                             <td><div class="tc"><input id="darkmode" type="checkbox" onclick="darkmode_check()" onchange="" /><span></span></div></td>
                         </tr>
                         <tr>
-                            <td>Install PWA</td>
-                            <!--div class="download_pwa"><button class="button">install</button></div-->
-                            <td><div class="tc"><input type="checkbox" class="download_pwa"/><span></span></div></td>
+                            <td>Active PWA</td>
+                            <td><div class="tc"><input id="a_pwa" type="checkbox" onclick="pwa_check()" /><span></span></div></td>
                         </tr>
+                        <!--tr>
+                            <td>Install PWA</td>
+                            <td><div class="tc"><input type="checkbox" class="download_pwa"/><span></span></div></td>
+                        </tr-->
                         <!--tr>
                             <td>Option 2</td>
                             <td><div class="tc"><input type="checkbox" onclick="pwa_uninstall()"/><span></span></div></td>
@@ -94,8 +97,8 @@
                 </div>
 
                 <div class="form__group field">
-                    <input type="password" class="form__field" placeholder="password" name="password" id='key' required />
-                    <label for="password" class="form__label">Password</label>
+                    <input type="password" class="form__field" placeholder="password" name="key" id='key' required />
+                    <label for="key" class="form__label">Password</label>
                 </div>
             </center>
             <br>
@@ -107,7 +110,7 @@
         </div>
 
         <div id="notwork">
-            <button onclick="location.reload();" class="button"><i class="fa fa-refresh"></i> Refresh</button>
+            <button onclick="location.reload();" class="button"><i class="fa fa-refresh" style="margin-top: 10px;"></i> hiphp-DST is not running :(</button>
         </div>
     </body>
 </html>
