update hiphp site

--- a/hiphp-site/index.html
+++ b/hiphp-site/index.html
@@ -28,6 +28,22 @@
         <img style="width:150px;" src="logo_small.png">
       </center>
       <h1>Website is under review & updating ...</h1-->
+
+        <h1 class="center">Source Code</h1>
+        <div class="center p15">
+          <a href="https://github.com/yasserbdj96/hiphp">
+            <img class="p15 h100" alt="pypi" src="./icons/github.svg" title="github">
+          </a>
+          <a href="https://gitlab.com/yasserbdj96/hiphp">
+            <img class="p15 h100" alt="colab" src="./icons/gitlab.svg" title="gitlab">
+          </a>
+        </div>
+  
+        <br>
+        <br>
+        <br>
+
+
       <h1 class="center">Quick Setup</h1>
       <p class="center">Select your distro to get set up.</p>
 
